build: update webpack / TS build deps

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/send": "^0.14.5",
     "@types/split": "^1.0.0",
     "@types/uuid": "^3.4.6",
-    "@types/webpack": "^4.41.7",
-    "@types/webpack-env": "^1.15.1",
+    "@types/webpack": "^4.41.21",
+    "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^2.24.0",
     "@typescript-eslint/parser": "^2.24.0",
     "asar": "^3.0.1",
@@ -58,11 +58,11 @@
     "tap-xunit": "^2.4.1",
     "temp": "^0.8.3",
     "timers-browserify": "1.4.2",
-    "ts-loader": "^6.0.2",
-    "ts-node": "^6.0.3",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "ts-loader": "^7.0.5",
+    "ts-node": "6.2.0",
+    "typescript": "^3.9.6",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "private": true,
   "scripts": {
